# aibox

./: .gitignore  .pdm-python  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyproject.toml.bak  ruff.toml  test.py
aibox/: cli.py  config.py  mp.py  tbreader.py
aibox/slurm/: README.md  slurm.py
aibox/torch/: image.py  lightning.py  tensorboard.py  transforms.py  utils.py
scripts/: doc_gen.py
src/aibox/: __main__.py  cli.py  config.py  logger.py  mlflow.py  mp.py  progress.py  tbreader.py  utils.py
src/aibox/analysis/: seaborn.py
src/aibox/ffcv/: beton.py  dataset.py  loader.py  transforms.py  utils.py
src/aibox/images/: utils.py
src/aibox/slurm/: __init__.py  cli.py  slurm.py
src/aibox/slurm/templates/: ray_template.sh  sbatch_template.sh
src/aibox/torch/: __init__.py  callbacks.py  datasets.py  evaluate.py  image.py  lightning.py  logging.py  tensorboard.py  training.py  transforms.py  tuning.py  utils.py
src/aibox/torch/ffcv/: __init__.py  beton.py  dataset.py  loader.py  utils.py
templates/: main.py
tests/: test_cli.py  test_config.py  test_logging.py  test_slurm.py  test_tensorboard.py  test_tuner.py
tests/resources/: config.toml
tests/resources/configs/: default.toml  defaults.toml
tests/resources/configs/experiment/: debug-sl-modules.toml  debug.toml  refed.toml
tests/resources/configs/experiments/: debug-sl-modules.toml  debug.toml
tests/resources/configs/model/: vae.toml
tests/resources/configs/model/ref/: m.toml
tests/resources/configs/model/test/: defaults.toml
tests/resources/configs/models/: vae.toml
tests/resources/configs/models/test/: default.toml  test.toml
