[project]
name = "aibox"
description = "My AI utilities and helpers"
authors = [
    { name = "Daniel Capecci", email = "7775585+dk0d@users.noreply.github.com" },
]
dependencies = [
    "tomlkit>=0.11.6",
    "tqdm>=4.64.1",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "omegaconf>=2.3.0",
    "ipython>=8.11.0",
    "matplotlib>=3.7.1",
    "torchinstaller>=0.4.4",
    "rich>=13.3.4",
    "tensorboard>=2.12.2",
    "numpy>=1.24.2",
]
dynamic = ["version"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[tool.hatch.version]
path = "aibox/__version__.py"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[project.urls]

[project.optional-dependencies]
torch = [
    "torch>=1.13.1",
    "torchvision>=0.14.1",
    "torchaudio>=0.13.1",
    "pytorch-lightning>=1.9.4",
]

[tool.pdm.scripts]
test = "pytest tests"

[tool.pdm.build]
package-dir = "aibox/aibox"
includes = []

[tool.pdm.dev-dependencies]
test = ["pytest>=7.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [build-system]
# requires = ["pdm.backend"]
# build-backend = "pdm.backend"
