[project]
name = "aibox"
description = "My AI utilities and helpers"
authors = [
  { name = "Daniel Capecci", email = "7775585+dk0d@users.noreply.github.com" },
]
dependencies = [
  "tomlkit>=0.11.6",
  "tqdm>=4.64.1",
  "pyyaml>=6.0",
  "pandas>=2.1.3",
  "omegaconf>=2.3.0",
  "ipython>=8.11.0",
  "matplotlib>=3.8.2",
  "torchinstaller>=0.9.1",
  "rich>=13.3.4",
  "tensorboard>=2.12.2",
  "mlflow>=3.1.1",
  # "numpy>=1.23.2,<1.24.0", # old error with torch
  # "numpy>=1.26.0",
  "numpy",
  "einops>=0.6.1",
  "lightning[pytorch-extra]>=2.0.8",
  "polars",
  "scikit-image",
  "typer>=0.16.0",
  # "ffcv>=1.0.2",
]
dynamic = ["version"]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
aibox = 'aibox.__main__:main'

[project.urls]

[project.optional-dependencies]
docs = [
  'mkdocs-material>=7.3.3',
  "mkdocstrings[python]>=0.18",
  "mkdocs-gen-files>=0.5.0",
  "mike>=1.1.2",
]
torch = ["torch>=2.0.1", "torchvision", "torchaudio", "lightning>=2.0.8"]

# Doesn't seem to like installing on apple silicon or through pip 
ffcv = ["ffcv>=1.0.2"]

[tool.pyright]
include = ['src/aibox']
reportGeneralTypeIssues = false
reportMissingImports = true
reportUnusedImport = false
reportUnusedClass = false
pythonVersion = "3.10"

[tool.hatch.version]
source = 'regex_commit'
path = "src/aibox/___about___.py"
tag = true
tag_sign = false
commit_message = "chore: ⚡️ release v{new_version}"

[tool.pytest.ini_options]
# Only show warnings from aibox
filterwarnings = ['ignore', ":::aibox"]

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"
